fix: preloader z-index=0

--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -45,7 +45,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 0;
     padding: 20px;
     box-sizing: border-box;
 }
